<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postTasksLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostATaskActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:background="#F3F3F3"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textColor="#67A520"
            android:text="POST A TASK"
            android:textSize="32dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="7dp"
        >

        <TextView
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Task Type"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded_edit_text"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/tasksTypeSpinner_PostATask"
                android:layout_width="match_parent"
                android:layout_height="54dp" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Location:"
            />

        <TextView
            android:id="@+id/GPSLocation"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="#515151"
            android:text="My Location:" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="16sp"
                android:text="Expected Date" />


            <Button
                android:id="@+id/datePickerPostAtask"
                android:onClick="openCalenderOnClickButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="Pick A date" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Job description and contact info"
            android:textSize="16sp" />

        <EditText

            android:id="@+id/taskDescEditTxt"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="145dp"
            android:background = "@drawable/rounded_edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingRight="10dp"
            android:textSize="18sp"
            android:text="Compensation" />

        <EditText
            android:id="@+id/costEditTxt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"

            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:paddingLeft="5sp"
            android:hint="   $"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="10dp"
            android:textSize="18sp"
            android:text=" /hr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp">

            <LinearLayout
                android:id="@+id/deleteButtonParent"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/cancelPostAtask"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_2"
                    android:onClick="deletePostATaskOnButtonClick"
                    android:text="Delete"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/postButtonParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:gravity="right"
                android:paddingLeft="25dp">

                <Button
                    android:id="@+id/applyToTask"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:onClick="postATaskOnButtonClick"
                    android:text="Post"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/postATaskStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="#B31515" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:visibility="invisible"
        android:background="#DADADA"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="right"
                    android:layout_height="wrap_content">
                <Button
                    android:id="@+id/applicantsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:onClick="goToApplicantsList"
                    android:text="Applicants"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/payEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edit_text"
                        android:gravity="center|center_vertical"
                        android:onClick="goToPayEmployee"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="10dp"
                        android:text="Pay Employee"
                        android:visibility="invisible" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>