...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right">

        <Button
            android:id="@+id/deletedPosts"
            android:layout_width="297dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:background="#C8C8C8"
            android:onClick="showDeletedPostsOnClickButton"
...
